test/files/neg/t6582_exhaust_big.check
t6582_exhaust_big.scala:27: error: match may not be exhaustive.
It would fail on the following input: Z11()
  def foo(z: Z) = z match {
                  ^
one error found
